RGB Curves behave differently in Cycles and Eevee #62259

Closed
opened 2019-03-06 14:33:07 +01:00 by Björn Eckhardt · 3 comments

System Information
Operating system: Win10
Graphics card: GTX1080

Blender Version
Broken: 2.80 18e5540a48

Short description of error

RGBCurves seem to adjust Values differently in Eevee and cycle.
Too imitate a Coloramp which is adjustable even inside a Nodegroup, I use two RGB curves in line (s. file): the left one adjust the dark parts, the right one the bright parts by adjusting the factor of each RGBCurves. In Cyles this works nice: adjust the dark parts to have black spots and then you can increase the brightness of the bright parts with the secon RGB curves Factor to brighten them up without loosing the black parts.
Switching to Eevee the first coloramp behaves similar, but the second one seems "add" brightness/value to the whole image. You loose the black spots again.
I'm not sure how it works in the background, but it seem in Cylces the values are multiplied and in eevee they are added. But probably I'm wrong.

Exact steps for others to reproduce the error
see file under: 20190306_BUG_RGBCurves_2.80beta.blend1

  1. add material to cube
  2. add noise texture, 2 RGBCurves, 1 Diffuse and connect them in this order to the Material output
  3. left RGBCurve: set bottom left point to (0.90;0); factor to e.g. 0.15
  4. right/second RGB Curve: set top right point to (0.05, 1), factor = 0
  5. In cycles rendering: see patchie pattern,
  6. increase factor of second RGB Curve: dark stays, bright spots get brighter
  7. switch to eevee: already it looks different. play with the factor of second RGBCurve to see that the effect is very different

thx for your work :-D

**System Information** Operating system: Win10 Graphics card: GTX1080 **Blender Version** Broken: 2.80 18e5540a48b6 **Short description of error** RGBCurves seem to adjust Values differently in Eevee and cycle. Too imitate a Coloramp which is adjustable even inside a Nodegroup, I use two RGB curves in line (s. file): the left one adjust the dark parts, the right one the bright parts by adjusting the factor of each RGBCurves. In Cyles this works nice: adjust the dark parts to have black spots and then you can increase the brightness of the bright parts with the secon RGB curves Factor to brighten them up without loosing the black parts. Switching to Eevee the first coloramp behaves similar, but the second one seems "add" brightness/value to the whole image. You loose the black spots again. I'm not sure how it works in the background, but it seem in Cylces the values are multiplied and in eevee they are added. But probably I'm wrong. **Exact steps for others to reproduce the error** see file under: [20190306_BUG_RGBCurves_2.80beta.blend1](https://archive.blender.org/developer/F6773879/20190306_BUG_RGBCurves_2.80beta.blend1) 1. add material to cube 2. add noise texture, 2 RGBCurves, 1 Diffuse and connect them in this order to the Material output 3. left RGBCurve: set bottom left point to (0.90;0); factor to e.g. 0.15 4. right/second RGB Curve: set top right point to (0.05, 1), factor = 0 5. In cycles rendering: see patchie pattern, 6. increase factor of second RGB Curve: dark stays, bright spots get brighter 7. switch to eevee: already it looks different. play with the factor of second RGBCurve to see that the effect is very different thx for your work :-D

Added subscriber: @BjornEckhardt

Added subscriber: @BjornEckhardt
Clément Foucault was assigned by Sebastian Parborg 2019-03-06 17:49:35 +01:00

This issue was referenced by e1a62fa1a6

This issue was referenced by e1a62fa1a61167990c4ade74b9e8b56573e18d2d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62259
No description provided.