source/blender/nodes/shader/nodes/node_shader_curves.c
@@ -116,11 +116,39 @@ static int gpu_shader_curve_rgb(GPUMaterial *mat, bNode *node, bNodeExecData *UN
 	float *array, layer;
 	int size;
 
-	curvemapping_initialize(node->storage);
-	curvemapping_table_RGBA(node->storage, &array, &size);
+	CurveMapping *cumap = node->storage;
+
+	curvemapping_initialize(cumap);
+	curvemapping_table_RGBA(cumap, &array, &size);
 	GPUNodeLink *tex = GPU_color_band(mat, size, array, &layer);
 
-	return GPU_stack_link(mat, node, "curves_rgb", in, out, tex, GPU_constant(&layer));
+	float ext_rgba[4][4];
+	float range_rgba[4];
+
+	for (int a = 0; a < CM_TOT; ++a) {
+		const CurveMap *cm = &cumap->cm[a];
+		ext_rgba[a][0] = cm->mintable;
+		ext_rgba[a][2] = cm->maxtable;
+		range_rgba[a] = 1.0f / max_ff(1e-8f, cm->maxtable - cm->mintable);
+		/* Compute extrapolation gradients. */
+		if ((cm->flag & CUMA_EXTEND_EXTRAPOLATE) != 0) {
+			ext_rgba[a][1] = (cm->ext_in[0] != 0.0f) ? (cm->ext_in[1] / (cm->ext_in[0] * range_rgba[a])) : 1e8f;
+			ext_rgba[a][3] = (cm->ext_out[0] != 0.0f) ? (cm->ext_out[1] / (cm->ext_out[0] * range_rgba[a])) : 1e8f;
+		}
+		else {
+			ext_rgba[a][1] = 0.0f;
+			ext_rgba[a][3] = 0.0f;
+		}
+		print_v4_id(ext_rgba[a]);
+	}
+
+	return GPU_stack_link(mat, node, "curves_rgb", in, out, tex,
+	                                               GPU_constant(&layer),
+	                                               GPU_uniform(range_rgba),
+	                                               GPU_uniform(ext_rgba[0]),
+	                                               GPU_uniform(ext_rgba[1]),
+	                                               GPU_uniform(ext_rgba[2]),
+	                                               GPU_uniform(ext_rgba[3]));
 }
 
 void register_node_type_sh_curve_rgb(void)
